# razzle-dazzle

./: .pre-commit-config.yaml  brownie-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
scripts/: token.py
